--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       </form>
 
       <div id="result">
-
-      </div>
+        <p><span class="year"></span> is <span class="not"></span> a leap year.</p>
     </div>
   </body>
 </html>
